--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"theme": "zzz", "language": "zh-CN", "follow_sys": false, "view": "block"}
+{"theme": "light", "language": "zh-CN", "follow_sys": false, "view": "block"}
