增加开机自启动

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"theme": "light", "language": "zh-CN", "follow_sys": false, "view": "block"}
+{"theme": "light", "language": "zh-CN", "follow_sys": false, "view": "block", "auto_start": false}
