--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"theme": "light", "language": "zh-CN", "follow_sys": false, "view": "block", "auto_start": false, "use_bg": true, "bg": "bg.jpg", "ms_ef": 50}
+{"theme": "light", "language": "zh-CN", "follow_sys": false, "view": "block", "auto_start": false, "use_bg": true, "bg": "bg.png", "ms_ef": 0}
